(feat): the protocol module
The wire format, as an SBE schema with the codecs generated from it. Nine messages:
three commands and six events, matching docs/PROTOCOL.md.

Namespace drops IMC. groupId is io.github.giovanicaprison and the package root is
io.github.giovanicaprison.matching, which is the reverse-domain fallback for a
project hosted on GitHub without a domain, and the only namespace this could be
published under later without owning one.

Commands carry a frame of instrument and the sequence assigned upstream, since the
engine consumes input order rather than imposing it. Events carry their own
sequence and the sequence that caused them, so causality is in the data.

Pricing instruction, time in force and a post-only flag are separate fields rather
than one fused order type, and participant id is carried unread. Both are here now
because the wire format is the one thing in this project that is expensive to change
late, and adding either later means regenerating, rewriting every fixture and
re-blessing the corpus.

Session state and auctions are not in the schema. SBE versioning is the room for
them: a later version adds messages without breaking existing decoders.

Three tests. They do not test SBE, they test the schema, which is where a wrong
primitive type or a misplaced field would otherwise sit until an implementation read
a plausible wrong number out of it.

Agrona 2.x reaches jdk.internal.misc.Unsafe, so the build declares
--add-exports java.base/jdk.internal.misc=ALL-UNNAMED once in the parent. Benchmarks
will need the same flag.

Verified the same schema generates 18 C++ headers, so the cross-language claim in
the README is checked rather than assumed.